add controller acces for registration and login
